--- a/MqttClientWebAPI/MqttClientWebAPI.csproj
+++ b/MqttClientWebAPI/MqttClientWebAPI.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MQTTnet" Version="4.1.0.247" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
   </ItemGroup>
 
